<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/checkpoint_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:alpha="1"
        android:background="@drawable/coffe_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        >
    </ImageView>
    <LinearLayout
        android:layout_width="228dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200dp"

        android:background="@drawable/text_flag"
        >

    </LinearLayout>
    <TextView
        android:id="@+id/time_text"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/coffee_time"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/checkpoint_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        >

    </TextView>
    <TextView
        android:id="@+id/random_message"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red_pink"
        android:layout_margin="100dp"
        android:text="@string/_example"
        android:textSize="20sp"
        android:textColorHint="@color/crimson"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_bg"

        >
    </androidx.appcompat.widget.AppCompatButton>
</androidx.constraintlayout.widget.ConstraintLayout>